feat: add logic whose suggest list sorts by score, username